[tool.poetry]
name = "readthedocs-test"
version = "0.1.0"
description = ""
authors = ["amalhotra40 <abhinav@culturebiosciences.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.1.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-multiproject = "^1.0.0-rc.1"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
