[tool.poetry]
name = "vesselesque"
version = "0.1.0"
description = ""
authors = ["amalhotra40 <abhinav@culturebiosciences.com>"]

[tool.poetry.dependencies]
python = "==3.8.10"
numpy = "^1.23.1"
sphinxcontrib-napoleon = "^0.7"
sphinx-multiproject = "^1.0.0-rc.1"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^5.1.0"
myst-parser = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
